--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -15,6 +15,26 @@
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>3.0.5.Final</version>
 		</dependency>
+	    <dependency>
+	        <groupId>unknown.binary</groupId>
+	        <artifactId>javax.ws.rs-api-2.0</artifactId>
+	        <version>SNAPSHOT</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.glassfish.jersey.containers</groupId>
+	        <artifactId>jersey-container-servlet</artifactId>
+	        <version>2.5.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.glassfish.jersey.core</groupId>
+	        <artifactId>jersey-client</artifactId>
+	        <version>2.5.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.glassfish.jersey.media</groupId>
+	        <artifactId>jersey-media-moxy</artifactId>
+	        <version>2.5.1</version>
+	    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -23,8 +43,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -39,4 +59,11 @@
 			</plugin>
 		</plugins>
 	</build>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 </project>
